# Sorsa

./: .env.example  .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
Mindshare DDL/: ddl mindshare.sql
Plan/: updates.md
app/: __init__.py  cli.py  config.py  models.py
app/clients/: sorsa_client.py
app/db/: connection.py  repository.py
app/pipeline/: aux_ingestors.py  orchestrator.py  search_ingestor.py
ddl/: ddl_mindshare_ingestion.sql
docs/: index.md  ingestion-pipeline.md
ingestion-docs/: mkdocs.yml
ingestion-docs/docs/: architecture.md  data-model.md  index.md  pipeline-behavior.md  quickstart.md  runbook.md
ingestion-docs/site/: 404.html  index.html
ingestion-docs/site/architecture/: index.html
ingestion-docs/site/data-model/: index.html
ingestion-docs/site/pipeline-behavior/: index.html
ingestion-docs/site/quickstart/: index.html
ingestion-docs/site/runbook/: index.html
ingestion-docs/site/search/: search_index.json
site/: 404.html  index.html
site/ingestion-pipeline/: index.html
site/search/: search_index.json
